# gslides-claudecode

./: .gitignore  README.md  pyproject.toml  service_account.json.example
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: gslides-builder.md
.claude/skills/gslides-report/: SKILL.md
.claude/skills/gslides-setup/: SKILL.md
skills/gslides-setup/: SKILL.md
src/gslides_claudecode/: __init__.py  auth.py  cli.py  deck.py  notes.py  slides.py
tests/: conftest.py  test_auth.py  test_deck_unit.py  test_live.py  test_slides_unit.py
