[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gslides-claudecode"
version = "0.1.0"
description = "Google Slides API wrapper for Claude Code projects"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Claude Code Community"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-mock>=3.0",
]

[project.scripts]
gslides = "gslides_claudecode.cli:main"

[project.urls]
Homepage = "https://github.com/jorgebotas/gslides-claudecode"
Repository = "https://github.com/jorgebotas/gslides-claudecode"
Issues = "https://github.com/jorgebotas/gslides-claudecode/issues"